# altair-groups-ms

./: .env  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
migrations/: 20260302100802_init_groups_schema.sql  20260513120000_add_group_status_and_indexes.sql
src/: error.rs  main.rs  state.rs
src/models/: api.rs  assignments.rs  group.rs  member.rs  mod.rs
src/routes/: groups.rs  health.rs  mod.rs
src/services/: extractor.rs  groups_service.rs  mod.rs
