[package]
name = "altair-groups-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web / async
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Errors / env
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "tls-rustls"
] }

# Dates
chrono = { version = "0.4", features = ["serde"] }
